@@ -120,8 +120,14 @@ Output binary 16-bit words from 0 to 65535, byte-swapped.
 .BR \-df
 Output binary float values.
 .TP
+.BR \-dF
+Output byte-swapped binary float values.
+.TP
 .BR \-dd
 Output binary double values.
+.TP
+.BR \-dD
+Output byte-swapped binary double values.
 .TP
 .BR \-R
 Reverse ordering of colors so that the output is blue then green
